[package]
name = "authme-lite"
version = "0.0.0"
description = "Authme Lite"
authors = ["Levminer"]
license = ""
repository = ""
default-run = "authme-lite"
edition = "2021"
rust-version = "1.57"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0", features = [] }
embed-resource = "1.3" # DIALOG

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0", features = ["api-all"] }
window-vibrancy = "0.1.3"
native-dialog = "0.5.5"
sysinfo = "0.20.2"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "z"
