[package]
name = "authme-lite"
version = "0.0.0"
description = "Authme Lite"
authors = [ "Levminer" ]
license = "GPL-3.0"
repository = ""
default-run = "authme-lite"
edition = "2018"
build = "src/build.rs"

[build-dependencies]
tauri-build = { version = "1.0.0-beta.0" }
embed-resource = "1.3"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
native-dialog = "0.5.5"

  [dependencies.tauri]
  version = "1.0.0-beta"
features = ["api-all"]

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "z"
